<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome_thank_you">Welcome! Thank you for participating of our athletics quiz!</string>
    <string name="quiz_summary_email_subject">Athletics Quiz Result from\u0020</string>
    <string name="welcome_message1">Welcome! Thank You for participating of our Athletics quiz! Let\'s see how much do You know about athletics history.</string>
    <string name="welcome_message2">First! Let me know you a little more filling up this simple form.</string>
    <string name="question_1_header">Question 1</string>
    <string name="question_1_body">There are how many jumping events athletics? Do not consider the gender.</string>
    <string name="question_1_answer_1">2</string>
    <string name="question_1_answer_2">4</string>
    <string name="question_1_answer_3">6</string>
    <string name="question_1_answer_4">8</string>
    <string name="question_1_answer_5">10</string>
    <string name="question_2_header">Question 2</string>
    <string name="question_2_body">Who is the world record holder of high jump?</string>
    <string name="question_2_answer_1">Mutaz Essa BARSHIM</string>
    <string name="question_2_answer_2">Patrik SJÖBERG</string>
    <string name="question_2_answer_3">Bohdan BONDARENKO</string>
    <string name="question_2_answer_4">Javier Sotomayor</string>
    <string name="question_2_answer_5">Igor PAKLIN</string>
    <string name="question_3_header">Question 3</string>
    <string name="question_3_body">What are the initials of the main athletics international organization?</string>
    <string name="question_3_answer_1">IAAF</string>
    <string name="question_3_answer_2">WADA</string>
    <string name="question_3_answer_3">COB</string>
    <string name="question_3_answer_4">FINA</string>
    <string name="question_3_answer_5">FIBA</string>
    <string name="question_4_header">Question 4</string>
    <string name="question_4_body">Who was the athlete that created the Flop High Jump Technique?</string>
    <string name="question_4_answer_1">Mike Powell</string>
    <string name="question_4_answer_2">Dick Fosbury</string>
    <string name="question_4_answer_3">Michel Jhonson</string>
    <string name="question_4_answer_4">Platt Adams</string>
    <string name="question_4_answer_5">Mutaz Essa Barshim</string>
    <string name="question_5_header">Question 5</string>
    <string name="question_5_body">Who are the athlete with 9 gold medals in Olympic Games?</string>
    <string name="question_5_answer_1">Michel Jhonson</string>
    <string name="question_5_answer_2">Mohamed Farah</string>
    <string name="question_5_answer_3">Carl Lewis</string>
    <string name="question_5_answer_4">Platt Adams</string>
    <string name="question_5_answer_5">Al Oerter</string>
    <string name="question_6_header">Question 6</string>
    <string name="question_6_body">There are how many throwing events athletics? Do not consider the gender.</string>
    <string name="question_6_answer_1">2</string>
    <string name="question_6_answer_2">4</string>
    <string name="question_6_answer_3">8</string>
    <string name="question_6_answer_4">5</string>
    <string name="question_6_answer_5">9</string>
    <string name="question_7_header">Question 7</string>
    <string name="question_7_body">Select the correct events areas names in athletics below.</string>
    <string name="question_7_answer_1">Jumps</string>
    <string name="question_7_answer_2">Sprints</string>
    <string name="question_7_answer_3">Diving</string>
    <string name="question_7_answer_4">Race Walk</string>
    <string name="question_7_answer_5">Marathon</string>
    <string name="question_8_header">Question 8</string>
    <string name="question_8_body">Answer the questions typing the correct typ category. Use the answers THROW, VERTICAL, HORIZONTAL, COMBINED EVENTS or RACE WALK.</string>
    <string name="question_8_answer_hint">Type your answer</string>
    <string name="question_8_answer_1_title">High Jump</string>
    <string name="question_8_answer_2_title">Shot put</string>
    <string name="question_8_answer_3_title">Long Jump</string>
    <string name="question_8_answer_4_title">50km</string>
    <string name="question_8_answer_5_title">Decathlon</string>
    <string name="send_by_email">Send by email</string>
    <string name="type_your_name">Type you name</string>
    <string name="type_your_email">Type your email</string>
    <string name="type_your_age">Type you age</string>
    <string name="send_me_a_copy">Send me a copy</string>
    <string name="send_me_more_quiz">Send me more quiz in the future (once a month)</string>
    <string name="i_wish_a_copy">Receive a quiz copy by email?</string>
    <string name="wish_more_future_quiz">Send me more quiz in the future (once a month):</string>
    <string name="are_you_active_athlete">Are You an athlete?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="my_quiz_athletics_result">My Quiz Athletics Result:\u0020</string>
    <string name="name">Name:\u0020</string>
    <string name="email">Email:\u0020</string>
    <string name="age">Age:\u0020</string>
    <string name="number_of_hits">Number of Hits:\u0020</string>
    <string name="points_earned">Points Earned:\u0020</string>
    <string name="hit">\u0020 You got a Hit!</string>
    <string name="missed">\u0020 You missed it!</string>
    <string name="rate_this_quiz">Rate this quiz:</string>
    <string name="correct_answer">Correct answer:</string>
    <string name="your_answer">Your answer:</string>
    <string name="am_i_active_athlete">Am I an active athlete?</string>
    <string name="feeling_not_seen">OK. Don\'t worry. I din\'t see this!</string>
    <string name="feeling_crazy">Are you kidding me? That is a bad result.</string>
    <string name="feeling_bad">Ops! Not so bad but You need to do some research.</string>
    <string name="feeling_cool">Nice! You really know about athletics.</string>
    <string name="feeling_awesome">WoW! Perfect! You hit all questions. Congratulations!</string>
    <string name="user_answer_here">User answer</string>
    <string name="correct_answer_here">Correct answer here</string>
    <string name="you_missed_this_one">You\'ve missed this one!</string>
    <string name="answers_summary">Answers Summary</string>
    <string name="you_hit">Number of Hits:</string>
    <string name="feedback_form">Did You like this quiz? Please, give us some feedback.</string>
    <string name="type_your_suggestions_here">Type your suggestions here</string>
    <string name="your_feedback">Your suggestions:</string>
    <string name="you_finish_the_quiz">You finish the quiz!</string>
    <string name="next_question_2_8">Next Question 2 of 8</string>
    <string name="next_question_3_8">Next Question 3 of 8</string>
    <string name="next_question_4_8">Next Question 4 of 8</string>
    <string name="next_question_5_8">Next Question 5 of 8</string>
    <string name="next_question_6_8">Next Question 6 of 8</string>
    <string name="next_question_7_8">Next Question 7 of 8</string>
    <string name="next_question_8_8">Next Question 8 of 8</string>
    <string name="finish">FINISH</string>
    <string name="select_one_of_the_answers">Select one of the answers.</string>
    <string name="you_must_type_your_name">You must type your name</string>
    <string name="you_must_type_your_email">You must type your email</string>
    <string name="select_if_you_are_athlete">Select if you are athlete or not.</string>
    <string name="age_can_not_be_empty">Age can not be empty.</string>
    <string name="age_must_be_greater_than">Your age must be greater than 5.</string>
    <string name="you_made">You\'ve made\u0020</string>
    <string name="correct_hits">\u0020correct hits</string>
    <string name="earned">and earned\u0020</string>
    <string name="points">\u0020 points</string>
    <string name="and_earned">and earned</string>
    <string name="i_did_not_see_this">I did not see this.</string>
    <string name="of_6_questions">of 8 questions</string>
    <string name="next_feedback">NEXT - FEEDBACK</string>
    <string name="next">NEXT</string>
    <string name="questions">Questions:</string>
    <string name="show_results">Show Results</string>
    <string name="show_summary">Show Summary</string>
    <string name="correct_answer_1">4</string>
    <string name="correct_answer_2">Javier Sotomayor</string>
    <string name="correct_answer_3">IAAF</string>
    <string name="correct_answer_4">Dick Fosbury</string>
    <string name="correct_answer_5">Carl Lewis</string>
    <string name="correct_answer_6">4</string>
    <string name="correct_answer_8_1">VERTICAL</string>
    <string name="correct_answer_8_2">THROW</string>
    <string name="correct_answer_8_3">HORIZONTAL</string>
    <string name="correct_answer_8_4">RACE WALK</string>
    <string name="correct_answer_8_5">COMBINED EVENTS</string>
    <string name="you_got_a_hit">You\'ve got a Hit!</string>
    <string name="not_see_this">I did not see this.</string>
    <string name="bad_result">That is a bad result.</string>
    <string name="not_so_bad">Not so bad.</string>
    <string name="great_result">Nice! That is a great result.</string>
    <string name="awesome">Awesome!</string>
    <string name="perfect_result">Perfect! You hit all the questions!</string>
    <string name="result_feedback_1">OK. Don\'t worry. I din\'t see this!</string>
    <string name="result_feedback_2">That was a bad result</string>
    <string name="result_feedback_3">Ops! Not so bad but you really need do research!</string>
    <string name="result_feedback_4">Nice! You really know about athletics.</string>
    <string name="result_feedback_5">You almost hit all the questions!</string>
    <string name="result_feedback_6">Perfect! You hit all questions. Congratulations!</string>
</resources>