<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.udacity.nanodegree.quizapp.SummaryActivity">
    <TextView
        style="@style/questionHeader"
        android:text="Answers Summary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="Points earned:"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/points_earned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="0"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="You hit:"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/number_of_hit_questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="0"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="of 6 questions"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/img_felling"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/felling_cool"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/general_comment"
                android:text="Awesome!!! You"
                android:layout_margin="8dp"
                android:layout_gravity="center"/>





            <android.support.v7.widget.CardView
                style="@style/cardBaseLayout"
                android:visibility="visible">
                <LinearLayout
                    style="@style/cardLinearLayoutVertical">
                    <TextView
                        style="@style/questionHeader"
                        android:text="@string/question_1_header"/>
                    <TextView
                        android:id="@+id/question1"
                        style="@style/questionBody"
                        android:text="@string/question_1_body" />
                    <TextView
                        style="@style/summary_answers_header"
                        android:text="@string/your_answer"/>
                    <TextView
                        style="@style/summary_answers"
                        android:id="@+id/user_answer1"
                        android:text="User answer here..."/>
                    <TextView
                        style="@style/summary_answers_header"
                        android:text="@string/correct_answer"/>
                    <TextView
                        style="@style/summary_answers"
                        android:id="@+id/correct_answer1"
                        android:text="Correct answer here..."/>
                    <LinearLayout
                        style="@style/summary_bottom_layout">
                        <ImageView
                            android:id="@+id/img_answer1"
                            style="@style/summary_bottom_layout_image"
                            android:src="@drawable/question_missed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/summary_bottom_layout_text_1"
                            android:text="You missed text... here"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>






            <android.support.v7.widget.CardView
                style="@style/cardBaseLayout"
                android:visibility="visible">
                <LinearLayout
                    style="@style/cardLinearLayoutVertical">
                    <TextView
                        style="@style/questionHeader"
                        android:text="@string/question_2_header"/>
                    <TextView
                        android:id="@+id/question2"
                        style="@style/questionBody"
                        android:text="@string/question_2_body" />
                    <TextView
                        style="@style/summary_answers_header"
                        android:text="Your answer:"/>
                    <TextView
                        style="@style/summary_answers"
                        android:id="@+id/user_answer_2"
                        android:text="User answer here..."/>
                    <TextView
                        style="@style/summary_answers_header"
                        android:text="@string/the_correct_answer"/>
                    <TextView
                        style="@style/summary_answers"
                        android:id="@+id/correct_answer_2"
                        android:text="Correct answer here..."/>
                    <LinearLayout
                        style="@style/summary_bottom_layout">
                        <ImageView
                            android:id="@+id/img_answer_2"
                            style="@style/summary_bottom_layout_image"
                            android:src="@drawable/question_missed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/summary_bottom_layout_text_2"
                            android:text="You missed text... here"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                style="@style/questionHeader"
                android:text="@string/rate_this_quiz"/>

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="2.5"
                android:stepSize="0.5"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

            <Button
                style="@style/buttonDefault"
                android:text="@string/send_by_email"
                android:layout_gravity="center"
                android:onClick="sendQuizByEmail"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
